# assertutils

./: CMakeLists.txt  Makefile  README.md
examples/: art.c  fail.c  success.c
include/assertutils/: assertutils.h  error.h
include/assertutils/config/: config.h  config.h.in
src/: CMakeLists.txt  assertutils.c  error.c  error.h
src/assertutils/: CMakeLists.txt  error.c
